OSCAR-54 POM updated to use the plugin version 1.4.0

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,8 @@
             </plugin>
             <plugin>
                 <groupId>com.google.code.maven-license-plugin</groupId>
-                <artifactId>maven-license-plugin</artifactId>				
+                <artifactId>maven-license-plugin</artifactId>
+                <version>1.4.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
