--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>javax.servlet-api</artifactId>
             <scope>provided</scope>			
         </dependency>
+        <dependency>
+        	<groupId>org.easymock</groupId>
+        	<artifactId>easymock</artifactId>
+        	<version>3.1</version>
+        	<scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
