--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.caris</groupId>
         <artifactId>oscar_framework</artifactId>
-        <version>13.0-SNAPSHOT</version>
+        <version>13.0.0-RC5</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
