--- a/pom.xml
+++ b/pom.xml
@@ -1,45 +1,105 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>oscarexchange4j</artifactId>
-    <name>oscarexchange4j</name>
-    <packaging>jar</packaging>
-    <parent>
-        <groupId>com.caris</groupId>
-        <artifactId>oscar_framework</artifactId>
-        <version>14.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
-    
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.easymock</groupId>
-            <artifactId>easymock</artifactId>
-        </dependency>
-    </dependencies>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>oscarexchange4j</artifactId>
+	<version>15.0-SNAPSHOT</version>
+	<name>oscarexchange4j</name>
+	<packaging>jar</packaging>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.mycila.maven-license-plugin</groupId>
-                <artifactId>maven-license-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
+	<parent>
+		<groupId>com.caris.pom</groupId>
+		<artifactId>caris-opensource-pom</artifactId>
+		<version>12</version>
+	</parent>
+
+	<properties>
+		<branch>15.0</branch>
+		<project.scm.url>https://github.com/caris/OSCAR-js.git</project.scm.url>
+		<maven.project.info.reports.plugin.version>2.7</maven.project.info.reports.plugin.version>
+		<maven.site.plugin.version>3.3</maven.site.plugin.version>
+	</properties>
+
+	<issueManagement>
+		<system>JIRA</system>
+		<url>${issues.base.url}/OSCAR</url>
+	</issueManagement>
+
+	<ciManagement>
+		<system>Jenkins</system>
+		<url>${ci.base.url}/oscar_framework_${branch}</url>
+	</ciManagement>
+
+	<scm>
+		<connection>scm:git:${project.scm.url}</connection>
+		<developerConnection>scm:git:${project.scm.url}</developerConnection>
+		<url>${project.scm.url}</url>
+	</scm>
+
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+		</dependency>
+	</dependencies>
+
+	<repositories>
+		<repository>
+			<name>CARIS Snapshots</name>
+			<id>nexus.caris.com.snapshots</id>
+			<url>http://nexus.caris.com/nexus/content/repositories/public-snapshots/</url>
+		</repository>
+		<repository>
+			<name>CARIS Releases</name>
+			<id>nexus.caris.com.releases</id>
+			<url>http://nexus.caris.com/nexus/content/repositories/public-releases</url>
+		</repository>
+		<repository>
+			<name>CARIS Vendor</name>
+			<id>nexus.caris.com</id>
+			<url>http://nexus.caris.com/nexus/content/repositories/public-vendor/</url>
+		</repository>
+	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<name>Maven Plugin Repository</name>
+			<id>central</id>
+			<url>http://repo1.maven.org/maven2</url>
+		</pluginRepository>
+		<pluginRepository>
+			<name>oss.sonatype.org</name>
+			<id>oss.sonatype.org</id>
+			<url>http://oss.sonatype.org/content/groups/public</url>
+		</pluginRepository>
+		<pluginRepository>
+			<name>nexus.codehouse.org</name>
+			<id>nexus.codehouse.org</id>
+			<url>http://nexus.codehaus.org/content/groups/snapshots-group</url>
+		</pluginRepository>
+	</pluginRepositories>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.mycila.maven-license-plugin</groupId>
+				<artifactId>maven-license-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
